Fix icon spacing on mw-ui-icon's
Increase margin to 0.5em. Add a mw-ui-icon-only class to
all icons without labels to zero their margins.

--- a/modules/styles/board/topic/watchlist.less
+++ b/modules/styles/board/topic/watchlist.less
@@ -43,11 +43,6 @@
 			}
 		}
 
-		// Overwrite `.mw-ui-icon.mw-ui-icon-before` styles
-		.mw-ui-icon.mw-ui-icon-before:before {
-			margin-right: 0;
-		}
-
 		// When watched, hide the watch icon and show the unwatch icon
 		.flow-watch {
 			display: none;
