--- a/modules/styles/js.less
+++ b/modules/styles/js.less
@@ -78,10 +78,6 @@
 		-ms-animation: spin infinite 2s linear;
 		-o-animation: spin infinite 2s linear;
 		animation: spin infinite 2s linear;
-
-		&.mw-ui-icon-before:before {
-			margin-right: 0;
-		}
 	}
 }
 
